--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <!-- Intro Overlay -->
   <div id="intro" class="intro-overlay">
-    <img src="img/freepik__futuristic-robot-with-no-human-features-pure-machi__27827.png" alt="Futuristic Robot" class="intro-bg" />
+    <img src="freepik__futuristic-robot-with-no-human-features-pure-machi__27827.png" alt="Futuristic Robot" class="intro-bg" />
     <div class="intro-title">
       <span class="letter">V</span>
       <span class="letter">I</span>
@@ -27,7 +27,7 @@
 
   <!-- Header -->
   <header class="heading">
-    <a href="/" class="logo"><img src="img/Screenshot_20250804_112359_ChatGPT.jpg" alt="Viltrix Logo"></a>
+    <a href="/" class="logo"><img src="Screenshot_20250804_112359_ChatGPT.jpg" alt="Viltrix Logo"></a>
     <div class="menu" onclick="toggleMenu()">☰</div>
     <nav class="nav-menu" id="navMenu">
       <a href="#home">Home</a>
@@ -41,7 +41,7 @@
   <!-- Hero Section (Video placeholder) -->
   <section class="video-section" id="home">
     <video autoplay muted loop playsinline class="bg-video">
-      <source src="vid/2792370-hd_1920_1080_30fps.mp4" type="video/mp4">
+      <source src="2792370-hd_1920_1080_30fps.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div class="video-caption">
@@ -118,7 +118,7 @@
     </p>
   </div>
   <div style="flex: 1; min-width: 200px; position: relative; overflow: hidden; border-radius: 16px; box-shadow: 0 4px 24px rgba(0,0,0,0.18);">
-    <img src="img/8machine-_-Jw7p2A369As-unsplash.jpg" alt="Viltrix Inspiration" style="width: 100%; height: 100%; object-fit: cover; display: block;">
+    <img src="8machine-_-Jw7p2A369As-unsplash.jpg" alt="Viltrix Inspiration" style="width: 100%; height: 100%; object-fit: cover; display: block;">
   </div>
 </section>
   <section id="contact">
@@ -138,3 +138,4 @@
 
 </body>
 </html>
+
