--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="author" content="Khalid Ali">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viltrix</title>
+  <link rel="icon" href="Screenshot_20250804_112359_ChatGPT.jpg">
   <link rel="stylesheet" href="main.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
   <script src="ani.js" defer></script>
@@ -61,7 +62,7 @@
       <br>
       Last
     </h1>
-    <p class="morecorny1">Viltrix is a cutting-edge new age tech company.That is dedicated into providing
+    <p class="morecorny1">Viltrix is a cutting-edge new age tech company.That is dedicated to provide
       <br>
       innovative solutions.From web development to AI powered platforms. We blend creativity,
       <br>
@@ -77,13 +78,26 @@
     <br>
     Do
   </h1>
-  <ul class="morecorny">
-      <li>Web Development - Scalable, Modern , built for growth</li>
-      <li>Data Analytics - Swift and precise</li>
-      <li>UI/UX Design - Inspiring, intuitive experiences</li>
-      <li>Cloud Solutions - Secure , reliable </li>
-      <li>AI & Automation - Smart solutions for the future</li>
-    </ul>
+  <ul class="morecorny custom-icons">
+    <li><span class="icon-li"> 
+      <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><rect x="3" y="4" width="18" height="12" rx="2"/><rect x="7" y="20" width="10" height="2" rx="1"/></svg>
+      </span>Web Development - Scalable, Modern, built for growth</li>
+    <li><span class="icon-li">
+      <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><rect x="3" y="17" width="3" height="4"/><rect x="9" y="13" width="3" height="8"/><rect x="15" y="9" width="3" height="12"/><rect x="21" y="5" width="3" height="16"/></svg>
+      </span>Data Analytics - Swift and precise</li>
+    <li><span class="icon-li">
+      <!-- Painting palette icon -->
+      <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><ellipse cx="12" cy="12" rx="10" ry="8"/><circle cx="8.5" cy="10.5" r="1" fill="#fff"/><circle cx="15.5" cy="10.5" r="1" fill="#fff"/><circle cx="10" cy="14" r="1" fill="#fff"/><circle cx="14" cy="14" r="1" fill="#fff"/></svg>
+      </span>UI/UX Design - Inspiring, intuitive experiences</li>
+    <li><span class="icon-li">
+      <!-- Cloud icon -->
+      <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><path d="M6 18a4 4 0 1 1 0-8 5.5 5.5 0 0 1 10.9 1.5A4.5 4.5 0 1 1 17 18H6z"/></svg>
+      </span>Cloud Solutions - Secure, reliable</li>
+    <li><span class="icon-li">
+      <!-- Robot icon -->
+      <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><rect x="5" y="8" width="14" height="10" rx="3"/><rect x="9" y="2" width="6" height="4" rx="2"/><circle cx="8.5" cy="13" r="1" fill="#fff"/><circle cx="15.5" cy="13" r="1" fill="#fff"/><rect x="7" y="18" width="2" height="2" rx="1"/><rect x="15" y="18" width="2" height="2" rx="1"/></svg>
+      </span>AI & Automation - Smart solutions for the future</li>
+  </ul>
   <section id="projects">
     <h1 class="corny">
       Featured
@@ -97,29 +111,29 @@
     <br>
     Viltrix
   </h1>
-  <ul class="morecorny">
-    <li>Innovative Approach</li>
-    <li>Commitment to Quality </li>
-    <li>Tailored solutions</li>
+  <ul class="morecorny custom-icons">
+    <li><span class="icon-li">
+      <svg width="26" height="26" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg"><path d="M20.285 6.709l-10.285 10.285-4.285-4.285 1.414-1.414 2.871 2.871 8.871-8.871z"/></svg>
+    </span>Innovative Approach</li>
+    <li><span class="icon-li">
+      <svg width="26" height="26" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg"><path d="M20.285 6.709l-10.285 10.285-4.285-4.285 1.414-1.414 2.871 2.871 8.871-8.871z"/></svg>
+    </span>Commitment to Quality</li>
+    <li><span class="icon-li">
+      <svg width="26" height="26" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg"><path d="M20.285 6.709l-10.285 10.285-4.285-4.285 1.414-1.414 2.871 2.871 8.871-8.871z"/></svg>
+    </span>Tailored solutions</li>
   </ul>
-<section id="yap" style="display: flex; align-items: stretch; min-height: 320px;">
-  <div style="flex: 1; display: flex; flex-direction: column; align-items: stretch; height: 100%; padding: 2rem 1rem 2rem 0;">
-    <h1 class="corny" style="margin-top: 0;"> 
-      Our 
-      <br>
-      Vision
-    </h1>
-    <p class="morecorny1" style="margin: 0;">We started viltrix to create technology that 
-      <br>
-      inspires and most importantly empowers. Our mission 
-      <br>
-      simply put:To build a future we want to live in. 〜Justin & Dennis
- 
-    </p>
-  </div>
-  <div style="flex: 1; min-width: 200px; position: relative; overflow: hidden; border-radius: 16px; box-shadow: 0 4px 24px rgba(0,0,0,0.18);">
-    <img src="8machine-_-Jw7p2A369As-unsplash.jpg" alt="Viltrix Inspiration" style="width: 100%; height: 100%; object-fit: cover; display: block;">
-  </div>
+<section id="yap">
+  <h1 class="corny yap-title"> 
+    Our 
+    <br>
+    Vision
+  </h1>
+  <p class="morecorny1 yap-text">We started viltrix to create technology that 
+    <br>
+    inspires and most importantly empowers. Our mission 
+    <br>
+    simply put:To build a future we want to live in. 〜Justin & Dennis
+  </p>
 </section>
   <section id="contact">
     <h1 class="corny">Get
@@ -138,4 +152,3 @@
 
 </body>
 </html>
-
