--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="author" content="Khalid Ali">
+  <meta name="author" content="Denis Kipruto KA">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viltrix</title>
   <link rel="icon" href="Screenshot_20250804_112359_ChatGPT.jpg">
@@ -28,7 +28,7 @@
 
   <!-- Header -->
   <header class="heading">
-    <a href="/" class="logo"><img src="Screenshot_20250804_112359_ChatGPT.jpg" alt="Viltrix Logo"></a>
+    <a href="/" class="logo"><img src="img/Screenshot_20250804_112359_ChatGPT.jpg" alt="Viltrix Logo"></a>
     <div class="menu" onclick="toggleMenu()">☰</div>
     <nav class="nav-menu" id="navMenu">
       <a href="#home">Home</a>
@@ -50,7 +50,7 @@
     </div>
   </section>
   <div class="hero-cta-container">
-  <a href="#contact" class="hero-cta">Explore Our Work</a>
+  <a href="#projects" class="hero-cta">Explore Our Work</a>
 </div>
 
 
