--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <script src="ani.js" defer></script>
 </head>
 <body>
-
-  <!-- Intro Overlay -->
-  <div id="intro" class="intro-overlay">
+   <div id="intro" class="intro-overlay">
     <img src="freepik__futuristic-robot-with-no-human-features-pure-machi__27827.png" alt="Futuristic Robot" class="intro-bg" />
     <div class="intro-title">
       <span class="letter">V</span>
@@ -25,59 +23,36 @@
       <span class="letter">X</span>
     </div>
   </div>
-
-  <!-- Header -->
   <header class="heading">
-    <a href="/" class="logo"><img src="img/Screenshot_20250804_112359_ChatGPT.jpg" alt="Viltrix Logo"></a>
+    <a href="/" class="logo"><img src="Screenshot_20250804_112359_ChatGPT.jpg" alt="Viltrix Logo"></a>
     <div class="menu" onclick="toggleMenu()">☰</div>
     <nav class="nav-menu" id="navMenu">
       <a href="#home">Home</a>
       <a href="#about">About</a>
-       <a href="#projects">projects</a>
+      <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
-     
     </nav>
   </header>
-
-  <!-- Hero Section (Video placeholder) -->
   <section class="video-section" id="home">
-    <video autoplay muted loop playsinline class="bg-video">
-      <source src="2792370-hd_1920_1080_30fps.mp4" type="video/mp4">
-      Your browser does not support the video tag.
+    <video autoplay muted loop playsinline class="bg-video" >
+      <source src="2792370-hd_1920_1080_30fps.mp4" type="video/mp4"> <video src=""></video>
     </video>
-    <div class="video-caption">
-    <h2></h2>
-    </div>
+    <div class="video-caption"><h2></h2></div>
   </section>
   <div class="hero-cta-container">
-  <a href="#projects" class="hero-cta">Explore Our Work</a>
-</div>
-
-
-  <!-- About -->
+    <a href="#projects" class="hero-cta">Explore Our Work</a>
+  </div>
   <section id="about">
-    <h1 class="corny">Crafted
-      <br>
-      To
-      <br>
-      Last
-    </h1>
-    <p class="morecorny1">Viltrix is a cutting-edge new age tech company.That is dedicated to provide
-      <br>
-      innovative solutions.From web development to AI powered platforms. We blend creativity,
-      <br>
-      enginering and strategy to deliver solutions that inspire, empower and set the gold standard
-      <br>
-      in innovation and beyond.
+    <h1 class="corny">Crafted<br>To<br>Last</h1>
+    <p class="morecorny1">
+      Viltrix is a cutting-edge new age tech company that believe's innovation isn't just about technology 
+      :It's about redefining what is considered possible.From web development to AI powered platforms, 
+      we blend creativity, engineering and strategy to deliver solutions that inspire, empower 
+      and set the gold standard in innovation.
     </p>
   </section>
 
-  <h1 class="corny">What 
-    <br>
-    We
-    <br>
-    Do
-  </h1>
+  <h1 class="corny">What<br>We<br>Do</h1>
   <ul class="morecorny custom-icons">
     <li><span class="icon-li"> 
       <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><rect x="3" y="4" width="18" height="12" rx="2"/><rect x="7" y="20" width="10" height="2" rx="1"/></svg>
@@ -86,31 +61,22 @@
       <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><rect x="3" y="17" width="3" height="4"/><rect x="9" y="13" width="3" height="8"/><rect x="15" y="9" width="3" height="12"/><rect x="21" y="5" width="3" height="16"/></svg>
       </span>Data Analytics - Swift and precise</li>
     <li><span class="icon-li">
-      <!-- Painting palette icon -->
       <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><ellipse cx="12" cy="12" rx="10" ry="8"/><circle cx="8.5" cy="10.5" r="1" fill="#fff"/><circle cx="15.5" cy="10.5" r="1" fill="#fff"/><circle cx="10" cy="14" r="1" fill="#fff"/><circle cx="14" cy="14" r="1" fill="#fff"/></svg>
       </span>UI/UX Design - Inspiring, intuitive experiences</li>
     <li><span class="icon-li">
-      <!-- Cloud icon -->
       <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><path d="M6 18a4 4 0 1 1 0-8 5.5 5.5 0 0 1 10.9 1.5A4.5 4.5 0 1 1 17 18H6z"/></svg>
       </span>Cloud Solutions - Secure, reliable</li>
     <li><span class="icon-li">
-      <!-- Robot icon -->
       <svg width="28" height="28" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><rect x="5" y="8" width="14" height="10" rx="3"/><rect x="9" y="2" width="6" height="4" rx="2"/><circle cx="8.5" cy="13" r="1" fill="#fff"/><circle cx="15.5" cy="13" r="1" fill="#fff"/><rect x="7" y="18" width="2" height="2" rx="1"/><rect x="15" y="18" width="2" height="2" rx="1"/></svg>
       </span>AI & Automation - Smart solutions for the future</li>
   </ul>
   <section id="projects">
-    <h1 class="corny">
-      Featured
-      <br>
-      Work
-    </h1>
+    <h1 class="corny">Featured<br>Work</h1>
+     <div class="hero-cta-container">
+    <a href="https://altara1.netlify.app/#listings" class="hero-cta">Visit Our work</a>
+  </div>
   </section>
-
-  <h1 class="corny">
-    Why 
-    <br>
-    Viltrix
-  </h1>
+  <h1 class="corny">Why<br>Viltrix</h1>
   <ul class="morecorny custom-icons">
     <li><span class="icon-li">
       <svg width="26" height="26" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg"><path d="M20.285 6.709l-10.285 10.285-4.285-4.285 1.414-1.414 2.871 2.871 8.871-8.871z"/></svg>
@@ -122,33 +88,107 @@
       <svg width="26" height="26" viewBox="0 0 24 24" fill="#ffd700" xmlns="http://www.w3.org/2000/svg"><path d="M20.285 6.709l-10.285 10.285-4.285-4.285 1.414-1.414 2.871 2.871 8.871-8.871z"/></svg>
     </span>Tailored solutions</li>
   </ul>
-<section id="yap">
-  <h1 class="corny yap-title"> 
-    Our 
-    <br>
-    Vision
-  </h1>
-  <p class="morecorny1 yap-text">We started viltrix to create technology that 
-    <br>
-    inspires and most importantly empowers. Our mission 
-    <br>
-    simply put:To build a future we want to live in. 〜Justin & Dennis
-  </p>
-</section>
-  <section id="contact">
-    <h1 class="corny">Get
-      <br>
-      In 
-      <br>
-      Touch
-    </h1>
-    <p class="morecorny">Email: <a href="mailto:info@viltrix.com">info@viltrix.com</a></p>
+
+  <section id="testimonials">
+    <div class="testimonial-blur-card">
+      <div class="testimonial-container">
+        <div class="testimonial active">
+          <p>“Viltrix didn't just deliver a product — they gave us a competitive edge we didn't know was possible. Their team blends raw creativity with precision engineering. Every deadline was hit, every detail accounted for. I’d trust them with my company’s future again in a heartbeat.”</p>
+          <h4>John Mwangi - CEO, RI</h4>
+        </div>
+        <div class="testimonial">
+          <p>“Partnering with Viltrix was the smartest decision I've made in the past decade. Their solutions scale effortlessly, and their vision is years ahead of the industry. This isn’t just a service provider — it’s a strategic partner for innovation.”</p>
+          <h4>Faith Achieng - Founder & CEO, NT</h4>
+        </div>
+        <div class="testimonial">
+          <p>“Viltrix redefined how we think about technology in our organization. From seamless integration to breathtaking design, every aspect of their work exceeded expectations. They’re not building websites — they’re building the future.”</p>
+          <h4>David Otieno - Director of Digital Strategy, LGV</h4>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <!-- Footer -->
+
+  <section id="yap">
+    <h1 class="corny yap-title">Our<br>Vision</h1>
+    <p class="morecorny1 yap-text">
+      Founded by two driven visionaries , Our vision is simple;
+      <br>  
+      To become a global force of change , Using technology as a bridge to transform lives, create purpose and open
+      new paths for people to thrive.
+      <br>
+      We see a future where innovation doesn't just power devices, but empowers people, transform digital 
+      solutions , elevate businesses and shape lives. 
+      <br>〜Justin & Dennis - Co-founders of Viltrix
+    </p>
+  </section>
+  <section id="contact">
+    <h1 class="corny">Get<br>In<br>Touch</h1>
+    <p class="morecorny1">Have a project in mind or just want to say hi? We'd love to hear from you.</p>
+    <p class="morecorny">📧 <a href="mailto:info@viltrix.com">info@viltrix.com</a></p>
+    <p class="morecorny">
+      <span style="vertical-align:middle;display:inline-flex;align-items:center;gap:0.3em;">
+        <svg width="22" height="22" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><circle cx="16" cy="16" r="16" fill="#25D366"/><path d="M23.5 18.7c-.3-.2-1.7-.8-2-1s-.5-.2-.7.1c-.2.2-.8 1-.9 1.2-.2.2-.3.2-.6.1-1.6-.6-2.8-2.2-3.1-2.6-.2-.3 0-.4.1-.6.1-.1.2-.2.3-.4.1-.1.1-.2.2-.3.1-.2.1-.4 0-.6-.1-.2-.7-1.7-1-2.3-.2-.5-.4-.5-.7-.5h-.6c-.2 0-.5.1-.7.3-.2.2-1 1-1 2.5 0 1.5 1.1 3 1.3 3.2.2.2 2.2 3.4 5.4 4.2.8.2 1.4.3 1.9.2.6-.1 1.8-.7 2-1.4.2-.7.2-1.3.1-1.4z" fill="#fff"/></svg>
+        <a href="https://wa.me/254705877986" target=>+254 705877986</a>
+      </span>or
+      <span style="margin-left:1.2em;vertical-align:middle;display:inline-flex;align-items:center;gap:0.3em;">
+        <svg width="22" height="22" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align:middle;"><circle cx="16" cy="16" r="16" fill="#25D366"/><path d="M23.5 18.7c-.3-.2-1.7-.8-2-1s-.5-.2-.7.1c-.2.2-.8 1-.9 1.2-.2.2-.3.2-.6.1-1.6-.6-2.8-2.2-3.1-2.6-.2-.3 0-.4.1-.6.1-.1.2-.2.3-.4.1-.1.1-.2.2-.3.1-.2.1-.4 0-.6-.1-.2-.7-1.7-1-2.3-.2-.5-.4-.5-.7-.5h-.6c-.2 0-.5.1-.7.3-.2.2-1 1-1 2.5 0 1.5 1.1 3 1.3 3.2.2.2 2.2 3.4 5.4 4.2.8.2 1.4.3 1.9.2.6-.1 1.8-.7 2-1.4.2-.7.2-1.3.1-1.4z" fill="#fff"/></svg>
+        <a href="https://wa.me/254741154854" target=>+254 741154854</a>
+      </span>
+    </p>
+   
+    <div style="margin-top:1.2em;display:flex;gap:1.2em;align-items:center;">
+      <div class="contact-socials"><a href="" aria-label="GitHub" style="display:inline-flex;align-items:center;">
+        <svg width="28" height="28" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="16" cy="16" r="16" fill="#181717"/><path d="M16 7.5c-4.7 0-8.5 3.8-8.5 8.5 0 3.8 2.5 7 6 8.1.4.1.5-.2.5-.4v-1.4c-2.4.5-2.9-1.1-2.9-1.1-.3-.8-.7-1-1-1.1-.8-.5.1-.5.1-.5.9.1 1.4.9 1.4.9.8 1.4 2.1 1 2.6.8.1-.6.3-1 .5-1.2-1.9-.2-3.9-1-3.9-4.2 0-.9.3-1.6.8-2.2-.1-.2-.3-1 .1-2.1 0 0 .7-.2 2.2.8.7-.2 1.5-.3 2.2-.3s1.5.1 2.2.3c1.5-1 2.2-.8 2.2-.8.4 1.1.2 1.9.1 2.1.5.6.8 1.3.8 2.2 0 3.2-2 4-3.9 4.2.3.3.5.7.5 1.4v2c0 .2.1.5.5.4 3.5-1.1 6-4.3 6-8.1 0-4.7-3.8-8.5-8.5-8.5z" fill="#fff"/></svg>
+      </a>
+      <a href="https://www.linkedin.com/company/viltrix/" aria-label="LinkedIn" style="display:inline-flex;align-items:center;">
+        <svg width="28" height="28" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="16" cy="16" r="16" fill="#0077B5"/><path d="M12.1 22.2h-2.5v-7.7h2.5v7.7zm-1.2-8.8c-.8 0-1.3-.6-1.3-1.2 0-.7.5-1.2 1.3-1.2s1.3.5 1.3 1.2c0 .6-.5 1.2-1.3 1.2zm9.1 8.8h-2.5v-4.1c0-1-.4-1.7-1.3-1.7-.7 0-1.1.5-1.3 1-.1.2-.1.5-.1.8v4h-2.5s.1-6.5 0-7.7h2.5v1.1c.3-.5 1-1.3 2.4-1.3 1.8 0 3.1 1.2 3.1 3.7v4.2z" fill="#fff"/></svg>
+      </a>
+      <br>
+       <p>&#128205 Nairobi,Kenya</p></div>
+    </div>
+  </section>
   <footer>
+    <p><strong>Viltrix</strong> — Powering innovation wit precision.</p>
+    <nav>
+      <a href="#home">Home</a> |
+      <a href="#about">About</a> |
+      <a href="#projects">Projects</a> |
+      <a href="#contact">Contact</a>
+    </nav>
     <p>&copy; 2025 Viltrix. All rights reserved.</p>
   </footer>
 
+</footer>
+
+
+<button id="themeToggle" aria-label="Toggle dark mode" class="floating-theme-toggle">
+  <span id="themeIcon" aria-hidden="true">
+    <svg id="moonCloud" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <ellipse cx="28" cy="36" rx="14" ry="8" fill="#222" stroke="#ffd700" stroke-width="2"/>
+      <circle cx="34" cy="28" r="7" fill="#ffd700"/>
+      <path d="M38 28a6 6 0 0 1-6-6c0-2.5 1.5-4.7 3.7-5.6A7 7 0 1 0 38 28z" fill="#222"/>
+      <circle cx="34" cy="28" r="5" fill="#fffde4"/>
+      <circle cx="38" cy="24" r="2.2" fill="#ffd700" opacity="0.7"/>
+      <path d="M32 22a4 4 0 0 1 4-4 4 4 0 0 0-4 4z" fill="#ffd700"/>
+    </svg>
+    <svg id="sunCloud" width="48" height="48" viewBox="0 0 48 48" fill="none" style="display:none;" xmlns="http://www.w3.org/2000/svg">
+      <ellipse cx="20" cy="36" rx="14" ry="8" fill="#222" stroke="#ffd700" stroke-width="2"/>
+      <circle cx="14" cy="28" r="7" fill="#ffd700"/>
+      <g stroke="#ffd700" stroke-width="2">
+        <line x1="14" y1="17" x2="14" y2="10"/>
+        <line x1="14" y1="46" x2="14" y2="39"/>
+        <line x1="5" y1="28" x2="-2" y2="28"/>
+        <line x1="23" y1="28" x2="30" y2="28"/>
+        <line x1="7.5" y1="20.5" x2="2" y2="15"/>
+        <line x1="20.5" y1="35.5" x2="26" y2="41"/>
+        <line x1="7.5" y1="35.5" x2="2" y2="41"/>
+        <line x1="20.5" y1="20.5" x2="26" y2="15"/>
+      </g>
+      <circle cx="14" cy="28" r="5" fill="#fffde4"/>
+      <circle cx="14" cy="28" r="3.5" fill="#ffd700"/>
+    </svg>
+  </span>
+</button>
 </body>
 </html>
