--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
   <section id="yap">
     <h1 class="corny yap-title">Our<br>Vision</h1>
     <p class="morecorny1 yap-text">
-      Founded by two driven visionaries , Our vision is simple;
+      Founded by two driven visionaries,Our vision is simple;
       <br>  
-      To become a global force of change , Using technology as a bridge to transform lives, create purpose and open
+      To become a global force of change.Using technology as a bridge to transform lives,create purpose and open
       new paths for people to thrive.
       <br>
       We see a future where innovation doesn't just power devices, but empowers people, transform digital 
@@ -192,3 +192,4 @@
 </button>
 </body>
 </html>
+
