--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <div id="intro" class="intro-overlay">
-    <img src="freepik__futuristic-robot-with-no-human-features-pure-machi__27827.png" alt="Futuristic Robot" class="intro-bg" />
+    <img src="freepik__futuristic-robot-with-no-human-features-pure-machi__27827.png" alt="Futuristic Robot" class="intro-bg" loading="eager"/>
     <div class="intro-title">
       <span class="letter">V</span>
       <span class="letter">I</span>
@@ -35,7 +35,7 @@
   </header>
   <section class="video-section" id="home">
     <video autoplay muted loop playsinline class="bg-video" >
-      <source src="2792370-hd_1920_1080_30fps.mp4" type="video/mp4"> <video src=""></video>
+      <source src="2792370-hd_1920_1080_30fps.mp4" type="video/mp4" loading="eager"> <video src=""></video>
     </video>
     <div class="video-caption"><h2></h2></div>
   </section>
@@ -192,4 +192,5 @@
 </button>
 </body>
 </html>
+
 
